pod.yml
apiVersion: v1
kind: Pod
metadata:
name: sample-pod
labels:
zone: prod
version: v1
spec:
containers:
 - name: sample-ctr
image: 23gardasvinay116/hanuman:9
ports:
- containerPort: 80
