svc1.yml
apiVersion: v1
kind: Service
metadata:
 name: svc1
 labels:
 app: app-v1
 spec:
 selector:
 app : app-v1
 ports:
 - port: 80
 nodePort: 30001
 protocol : TCP
type: NodePort
