ingress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
name: myingress
labels:
name: myingress
spec:
rules:
- http:
 paths:
 - path: "/cart"
 backend:
 service:
 name:svc1
 port:
 number: 80
 - path: "/products"
 backend:
 service:
 name:<Service>
 port:
 number: 80
